# libretto

./: Cargo.toml  LICENSE  build.rs
proto/: dfs.proto
src/: client.rs  lib.rs  main.rs  pubsub.rs  server.rs  statics.rs  watcher.rs
