[package]
name = "libretto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "libretto"
path = "src/main.rs"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.38.0", features = ["full"]}
chrono = "0.4.38"
futures = "0.3.30"
prost = "0.12.6"
notify = { version = "6.1.1", features = ["serde"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json"] }
tokio-stream = "0.1.15"
conductor = { git = "https://github.com/versatus/conductor.git" }
derive_more = "0.99.18"
async-trait = "0.1.80" 
rayon = "1.10.0"
log = "0.4"

[build-dependencies]
tonic-build = "0.11.0"
